# esp32c6_webserver_at

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MAYA_README.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
docs/: API_REFERENCE.md  AT_COMMANDS.md  TROUBLESHOOTING.md
examples/: at_commands_example.c  basic_usage.c
main/: CMakeLists.txt  main.c
src/: captive_portal.c  captive_portal.h  main.c  ota_handler.c  ota_handler.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
